minor tweaks refac: removed use of roboto font feat: profile picture layout shift prevention

--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ h6 {
   --color-card: #b3b4c0;
 
   --font-heading: 'Artega';
-  --font-body: 'Roboto', sans-serif;
+  --font-body: 'SeedDemBol W00 Regular';
   --font-username: 'Syncopate Bold';
   --font-small-text: 'SeedDemBol W00 Regular';
 
@@ -182,6 +182,8 @@ p {
 #profile-picture {
   width: var(--profile-picture-size);
   height: var(--profile-picture-size);
+  aspect-ratio: 1/1;
+  object-fit: cover;
   border: solid var(--profile-picture-border-color)
     var(--profile-picture-border-size);
   border-radius: 100%;
